Hide portrait on smaller widths

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ nav-menu: -1
         <p>Below you can see a small collection of my personal creations, but be sure to check the <a href="{{ site.baseurl }}/Showcases">Showcases</a> and <a href="{{ site.baseurl }}/Tutorials">Tutorials</a> pages for more technical art content.</p>
         <p>Want to know more? Interested in my work? Contact me at <a href="mailto:kelvinvanhoorn@outlook.com">kelvinvanhoorn@outlook.com</a></p>
     </div>
-    <div class="container image__container">
+    <div id="portrait-container" class="container image__container">
         <img src="/assets/pages/home/Portrait.jpg" alt="A picture of my face." class="portrait innerRound">
     </div>
 </div>
