--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: home
 nav-menu: -1
 ---
 
-<div class="grid__columns-2-1 grid__align--bottom" style="align-items: top;">
+<div class="grid__about-me grid__align--bottom" style="align-items: top;">
     <div>
         <p style="font-size: 2rem; line-height: 1em; font-weight: bold;">Hi, I’m an experienced technical artist that loves to make stylised art through shaders, VFX and programming.<p>
         <p>After finishing my Master in Applied Physics I decided I wanted to work in the games industry, specfically on the graphical art side. In order to get there I taught myself to write shaders through online tutorials, experimentation and art challenges.</p>
