Align menu left and theme right

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ nav-menu: -1
 
 <div class="grid__about-me">
     <div>
-        <p style="font-size: 2rem; line-height: 1em; font-weight: bold;">Hi, I’m an experienced technical artist that loves to make stylised art through shaders, VFX and programming.<p>
+        <p style="font-size: xx-large; line-height: 1em; font-weight: bold;">Hi, I’m an experienced technical artist that loves to make stylised art through shaders, VFX and programming.<p>
         <p>After finishing my Master in Applied Physics I decided I wanted to work in the games industry, specfically on the graphical art side. In order to get there I taught myself to write shaders through online tutorials, experimentation and art challenges.</p>
         <p>Since then I’ve worked at Pixel Toys on a yet unnanounced game as an experienced technical artist. There my resposibilities include shaders, render features, VFX, UI, tools, and optimisng the game the achieve its performance targets.</p>
         <p>Below you can see a small collection of my personal creations, but be sure to check the <a href="{{ site.baseurl }}/Showcases">Showcases</a> and <a href="{{ site.baseurl }}/Tutorials">Tutorials</a> pages for more technical art content.</p>
