--- a/Contact/index.html
+++ b/Contact/index.html
@@ -12,8 +12,18 @@ nav-menu: 3
     </a>
 </div>
 <div class="social__container--extended">
+    <a href="https://www.linkedin.com/in/kelvin-van-hoorn" target="_blank" style="text-decoration: none;">
+        <i class="fab fa-linkedin-in" style="vertical-align:text-bottom;"></i> Kelvin van Hoorn
+    </a>
+</div>
+<div class="social__container--extended">
     <a href="https://mastodon.gamedev.place/@KelvinvanHoorn" target="_blank" style="text-decoration: none;">
         <i class="fab fa-mastodon" style="vertical-align:text-bottom;"></i> @KelvinvanHoorn
+    </a>
+</div>
+<div class="social__container--extended">
+    <a href="https://bsky.app/profile/kelvinvanhoorn.bsky.social" target="_blank" style="text-decoration: none;">
+        <i class="fab fa-bluesky" style="vertical-align:text-bottom;"></i> @KelvinvanHoorn
     </a>
 </div>
 <div class="social__container--extended">
@@ -32,12 +42,12 @@ nav-menu: 3
     </a>
 </div>
 <div class="social__container--extended">
-    <a href="https://www.linkedin.com/in/kelvin-van-hoorn" target="_blank" style="text-decoration: none;">
-        <i class="fab fa-linkedin-in" style="vertical-align:text-bottom;"></i> Kelvin van Hoorn
+    <a href="https://radagasd.itch.io/" target="_blank" style="text-decoration: none;">
+        <i class="fab fa-itch-io" style="vertical-align:text-bottom;"></i> Radagasd
     </a>
 </div>
 <div class="social__container--extended">
-    <a href="https://radagasd.itch.io/" target="_blank" style="text-decoration: none;">
-        <i class="fab fa-itch-io" style="vertical-align:text-bottom;"></i> Radagasd
+    <a href="/feed.xml" target="_blank" style="text-decoration: none;">
+        <i class="fas fa-rss" style="vertical-align:text-bottom;"></i> RSS feed
     </a>
 </div>
