--- a/_posts/Tutorials/2022-03-17-skybox-tutorial-part-1.html
+++ b/_posts/Tutorials/2022-03-17-skybox-tutorial-part-1.html
@@ -445,12 +445,12 @@ float3 col = skyColor + sunColor + moonColor;</code></pre></div>
     </div>
 </div>
 
-<p>Let's add this normal calculation in the <cn>Fragment</cn> function by taking the difference between <cn>_MoonDir</cn> and <cn>viewDir</cn> scaled by <cn>moonIntersect</cn>. Add the highlighted line to our moon code.</p>
+<p>Let's add this normal calculation in the <cn>Fragment</cn> function by taking the difference between the <cn>viewDir</cn> scaled by <cn>moonIntersect</cn> and the <cn>_MoonDir</cn>. Add the highlighted line to our moon code.</p>
 
 <div class="container__code"><pre class="line-numbers round" data-line="4"><code class="language-hlsl">// The moon
 float moonIntersect = sphIntersect(viewDir, _MoonDir, _MoonRadius);
 float moonMask = moonIntersect > -1 ? 1 : 0;
-float3 moonNormal = normalize(_MoonDir - viewDir * moonIntersect);</code></pre></div>
+float3 moonNormal = normalize(viewDir * moonIntersect - _MoonDir);</code></pre></div>
 
 <p>We now have the normal, but for our NdotL lighting we also need the light direction. The light direction would be the direction of the sun's rays away from the moon. It is <em>away</em> from the sun because we want our surface to be lit if the dot product between the normal and light direction is 1.</p>
 
@@ -460,11 +460,11 @@ float3 moonNormal = normalize(_MoonDir - viewDir * moonIntersect);</code></pre><
     </div>
 </div>
 
-<p>In mathematical terms it can be expressed as \( d_l = norm(d_m r_m - d_s r_s) \). Here \(d_l\) is the light direction, \(d_m\) the moon direction, \(r_m\) the moon's distance to us, \(d_s\) the sun direction, \(r_s\) the sun's distance to us, and \(norm()\) a normalization function. This might look complicated, however, we can use the fact that the sun is much further away from us than the moon (about 400 times further). Using this fact we can roughly approximate the light direction by saying the sun's distance is so big that the moon's distance is neglectable, i.e. \(d_l = norm(d_m r_m - d_s r_s) ≈ norm(-d_s r_s) = -d_s\).</p>
+<p>In mathematical terms it can be expressed as \( d_l = norm(d_s r_s - d_m r_m) \). Here \(d_l\) is the light direction, \(d_s\) the sun direction, \(r_s\) the sun's distance to us, \(d_m\) the moon direction, \(r_m\) the moon's distance to us, and \(norm()\) a normalization function. This might look complicated, however, we can use the fact that the sun is much further away from us than the moon (about 400 times further). Using this fact we can roughly approximate the light direction by saying the sun's distance is so big that the moon's distance is neglectable, i.e. \(d_l = norm(d_s r_s - d_m r_m) ≈ norm(d_s r_s) = d_s\).</p>
 <p>We can now calculate our NdotL using the <cn>moonNormal</cn> and <cn>_SunDir</cn>. Add the highlighted line and adjust our moon variable to show the new lighting. Note that we use <cn>saturate</cn> to clamp the <cn>dot</cn> between 0 and 1, because there is no such thing as negative lighting.</p>
 
 <div class="container__code"><pre class="line-numbers round" data-line="2-3"><code class="language-hlsl">float3 moonNormal = normalize(_MoonDir - viewDir * moonIntersect);
-float moonNdotL = saturate(dot(moonNormal, -_SunDir));
+float moonNdotL = saturate(dot(moonNormal, _SunDir));
 float3 moonColor = moonMask * moonNdotL;</code></pre></div>
 
 <p>Let's also add an exposure property, so that we can control how bright the moon is. Add the following highlighted lines, and add the exposure to <cn>moonColor</cn>.</p>
@@ -528,7 +528,7 @@ float3 moonColor = moonMask * moonNdotL * exp2(_MoonExposure) * moonTexture;</co
     <img src="/assets/posts/tutorials/skybox-tutorial-part-1/SkyboxP1_TheMoon_Texture_01.png" alt="The moon with the color map applied." class="image__caption image__modal">
 </div>
 
-<p>Okay, we have the moon texture, so this section is done right? Well... if you change the moon's direction you'll notice that the texture changes, which is not how the real moon behaves (we only see 1 side). The texture changes because our UVW is the normal in world-space, meaning that it changes with the moon's rotation in the sky. What we want as UVW is the normal in the moon's local space, moon-space. In order to get that we need a space transformation matrix. We'll construct it in our C# script, <em>SkyboxController.cs</em>, from section <a href="#skybox-controller">2.1</a>. The transformation matrix consists of the 3 basis vectors that make up the local space, which are the forward, right and up vectors. Add the highlighted line to the <em>SkyboxController.cs</em> script, where we set a global shader matrix called <cn>_MoonSpaceMatrix</cn>. Note that we again use the negative directions.</p>
+<p>Okay, we have the moon texture, so this section is done right? Well... if you change the moon's direction you'll notice that the texture changes, which is not how the real moon behaves (we only see 1 side). The texture changes because our UVW is the normal in world-space, meaning that it changes with the moon's rotation in the sky. What we want as UVW is the normal in the moon's local space, moon-space. In order to get that we need a space transformation matrix. We'll construct it in our C# script, <em>SkyboxController.cs</em>, from section <a href="#skybox-controller">2.1</a>. The transformation matrix consists of the 3 basis vectors that make up the local space, which are the forward, right and up vectors. Add the highlighted line to the <em>SkyboxController.cs</em> script, where we set a global shader matrix called <cn>_MoonSpaceMatrix</cn>. Note that we make the right direction negative as well, in adition to the forward direction. This is to maintain the <a href="https://en.wikipedia.org/wiki/Right-hand_rule">right-handedness</a> of our system, i.e. the cross product of forward and right stays up. </p>
 
 <button class="collapsible round">Code block (<em>SkyboxController.cs</em>)</button>
 <div class="collapsible__content round code">
@@ -541,7 +541,7 @@ float3 moonColor = moonMask * moonNdotL * exp2(_MoonExposure) * moonTexture;</co
 
     // Moon
     Shader.SetGlobalVector("_MoonDir", -_Moon.transform.forward);
-    Shader.SetGlobalMatrix("_MoonSpaceMatrix", new Matrix4x4(-_Moon.transform.forward, -_Moon.transform.up, -_Moon.transform.right, Vector4.zero).transpose);
+    Shader.SetGlobalMatrix("_MoonSpaceMatrix", new Matrix4x4(-_Moon.transform.forward, _Moon.transform.up, -_Moon.transform.right, Vector4.zero).transpose);
 }</code></pre>
 </div>
 
@@ -558,15 +558,14 @@ float3 GetMoonTexture(float3 normal)
     return SAMPLE_TEXTURECUBE(_MoonCubeMap, sampler_MoonCubeMap, uvw).rgb;
 }</code></pre></div>
 
-<p>Now the moon's texture should appear stationary when you change the moon's direction. There is one final alteration I'd like to make, because we're not seeing the correct part of the moon texture. In order to correct this I've constructed an additional 3x3 rotation matrix, the values of which I got through some trial and error. All it does is rotate the normal such that the correct part is shown to us, you can think of it as a texture offset. Add the highlighted lines to get our final moon texture.</p>
+<p>Now the moon's texture should appear stationary when you change the moon's direction. There is one final alteration I'd like to make, because we're not seeing the correct part of the moon texture. In order to correct this I've constructed an additional 3x3 rotation matrix, the values of which I got through some trial and error, and could be improved. All it does is rotate the normal such that the correct part is shown to us, you can think of it as a texture offset. Add the highlighted lines to get our final moon texture.</p>
 
-<div class="container__code"><pre class="line-numbers round" data-line="5-8"><code class="language-hlsl">float3 GetMoonTexture(float3 normal)
+<div class="container__code"><pre class="line-numbers round" data-line="5-7"><code class="language-hlsl">float3 GetMoonTexture(float3 normal)
 {
     float3 uvw = mul(_MoonSpaceMatrix, float4(normal,0)).xyz;
 
-    float3x3 correctionMatrix = float3x3(0, -0.2588190451, -0.9659258263,
-        0.08715574275, 0.9622501869, -0.2578341605,
-        0.9961946981, -0.08418598283, 0.02255756611);
+    // Found through trial and error resulting in mul(AngleAxis3x3(0.5*PI, float3(0,1,0)), AngleAxis3x3(-0.08*PI, float3(1,0,0)));
+    float3x3 correctionMatrix = float3x3( 0, -0.24869, 0.968583, 0, 0.968583, 0.24869, -1, 0, 0);
     uvw = mul(correctionMatrix, uvw);
     
     return SAMPLE_TEXTURECUBE(_MoonCubeMap, sampler_MoonCubeMap, uvw).rgb;
