Update bsky links

--- a/Contact/index.html
+++ b/Contact/index.html
@@ -22,7 +22,7 @@ nav-menu: 3
     </a>
 </div>
 <div class="social__container--extended">
-    <a href="https://bsky.app/profile/kelvinvanhoorn.bsky.social" target="_blank" style="text-decoration: none;">
+    <a href="https://bsky.app/profile/kelvinvanhoorn.com" target="_blank" style="text-decoration: none;">
         <i class="fab fa-bluesky" style="vertical-align:text-bottom;"></i> @KelvinvanHoorn
     </a>
 </div>
