--- a/_posts/Tutorials/2024-11-01-skybox-tutorial-godot.html
+++ b/_posts/Tutorials/2024-11-01-skybox-tutorial-godot.html
@@ -486,7 +486,7 @@ vec3 getMoonTexture(vec3 dir)
 
 <p>Let's start by simply displaying the star map, by sampling it using the view direction. Add the texture uniform and sample it in the <cn>sky</cn> function. And don't forget to set the texture on the material.</p>
 
-<button class="collapsible round">Code block (<em>Skybox.shader</em>)</button>
+<button class="collapsible round">Code block (<em>Skybox.gdshader</em>)</button>
 <div class="collapsible__content round code"><pre class="line-numbers" data-line="" style="margin:0;"><code class="language-glsl">group_uniforms Stars;
 uniform samplerCube _StarCubemap : source_color;
 
@@ -505,7 +505,8 @@ void sky() {
 <p>That was easy, but looking at the result you might see a few problems, one of them being that the stars are drawn on top of the moon (and also sun). To fix this we multiply the starColor by 1 minus the moon and sun masks.</p>
 
 <div class="container__code"><pre class="line-numbers round" data-line="2"><code class="language-glsl">vec3 starColor = texture(_StarCubemap, viewDir).rgb;
-starColor *= (1.0 - sunMask) * (1.0 - moonMask);</code></pre></div>
+float starMask = (1.0 - sunMask) * (1.0 - moonMask);
+starColor *= starMask;</code></pre></div>
 
 <p>Another thing is that the stars look rather blurry. In order to make the stars sharper we'll be biasing the mip-level. This would make the texture values flicker more with camera movement, which normally would be bad but actually is appropriate for stars. Add the extra parameter to the texture sample to bias the mipmap by -1 (read the texture one mip-level lower than normal).</p>
 
@@ -515,7 +516,7 @@ starColor *= (1.0 - sunMask) * (1.0 - moonMask);</code></pre></div>
 
 <p>Let's also add an exposure and power value for the star map, so that we have more control over the absolute and relative brightness of the stars. Add 2 new uniforms, and take <cn>starColor</cn> to the power and multiply it by the exposure. The power basically makes fainter stars even fainter, as we're multiplying values smaller than 1 with themselves. The <cn>abs</cn> is only there to prevent an error message from Unity, as it can't handle powers of negative numbers.</p>
 
-<button class="collapsible round">Code block (<em>Skybox.shader</em>)</button>
+<button class="collapsible round">Code block (<em>Skybox.gdshader</em>)</button>
 <div class="collapsible__content round code"><pre class="line-numbers" data-line="3-4, 9-10" style="margin:0;"><code class="language-glsl">group_uniforms Stars;
 uniform samplerCube _StarCubemap : source_color;
 uniform float _StarExposure : hint_range(-16, 16) = 0;
@@ -525,14 +526,15 @@ void sky() {
 	// The stars
 	vec3 starColor = texture(_StarCubemap, viewDir).rgb;
 	starColor = pow(starColor, vec3(_StarPower));
-	starColor *= (1.0 - sunMask) * (1.0 - moonMask) * exp2(_StarExposure);
+    float starMask = (1.0 - sunMask) * (1.0 - moonMask);
+	starColor *= starMask * exp2(_StarExposure);
 }</code></pre>
 </div>
 
 <p>We're almost there but there is still one problem, the stars are still bright and visible during the day. In order to fix this we'll add another factor to <cn>starColor</cn>, which depends on <cn>sunZenithDot</cn> and <cn>sunViewDot01</cn>. The idea is that the stars are too dim compared to the sun or the sky during the day. Add and change the following lines.</p>
 
 <div class="container__code"><pre class="line-numbers round" data-line=""><code class="language-glsl">float starStrength = (1.0 - sunViewDot01) * (clamp(-sunZenithDot, 0.0, 1.0));
-starColor *= (1.0 - sunMask) * (1.0 - moonMask) * exp2(_StarExposure) * starStrength;</code></pre></div>
+starColor *= starMask * exp2(_StarExposure) * starStrength;</code></pre></div>
 
 <div class="container image__container round" style="width:100%">
     <img src="/assets/posts/tutorials/skybox-tutorial-godot/Skybox_TheStars_02.png" alt="The night sky, with star exposure and power set to 2 and 1.3 respectively. These values are pure personal preference to have the brightest stars affected by the bloom post-processing, without too much background noise." class="image__caption image__modal">
@@ -545,7 +547,7 @@ starColor *= (1.0 - sunMask) * (1.0 - moonMask) * exp2(_StarExposure) * starStre
 
 <p>In order to do these rotations we need a new function that can rotate a direction, given a rotation axis and rotation amount. I won't go over the mathetmatical details of this function, instead we'll be using this <cn>rotation3d</cn> function from <a href="https://github.com/dmnsgn/glsl-rotate" target="_blank">here</a>. Add this function above the <cn>sky</cn> function.</p>
 
-<button class="collapsible round">Code block (<em>Skybox.shader</em>)</button>
+<button class="collapsible round">Code block (<em>Skybox.gdshader</em>)</button>
 <div class="collapsible__content round code"><pre class="line-numbers" data-line="" style="margin:0;"><code class="language-glsl">// Construct a rotation matrix that rotates around a particular axis by angle
 // Adapted from: https://github.com/dmnsgn/glsl-rotate
 mat3 rotation3d(vec3 axis, float angle) {
@@ -563,7 +565,7 @@ mat3 rotation3d(vec3 axis, float angle) {
 
 <p>Let's encapsulate the rotations we're going to do in a new function called <cn>GetStarUVW</cn>. This function will take the view direction, a latitude and local sidereal time as input. We tilt the star map with respect to the world x-axis and spin it around the y-axis. The rest of this function is simply converting the latitude and time to radians and multiplying the rotation matrices in the correct order. Note that we tilt around the negative x-axis, that's just so that the game's z-axis corresponds to the north for.</p>
 
-<button class="collapsible round">Code block (<em>Skybox.shader</em>)</button>
+<button class="collapsible round">Code block (<em>Skybox.gdshader</em>)</button>
 <div class="collapsible__content round code"><pre class="line-numbers" data-line="" style="margin:0;"><code class="language-glsl">// Rotate the view direction, tilt with latitude, spin with time
 vec3 GetStarUVW(vec3 viewDir, float latitude, float localSiderealTime)
 {
@@ -585,7 +587,7 @@ vec3 GetStarUVW(vec3 viewDir, float latitude, float localSiderealTime)
 
 <p>Now we just need to use the <cn>starUVW</cn> instead of <cn>viewDir</cn> when sampling the star cubemap. However, we do need some input for the latitude and time. So let's add two new uniforms, the latitude in degrees between -90° (south pole) and 90° (north pole) and the speed with which the stars rotate (given in days per second). For the time itself we can use the built-in variable <cn>TIME</cn>, where we take the modulus to keep the time between 0 and 1. Add or change the highlighted lines.</p>
 
-<button class="collapsible round">Code block (<em>Skybox.shader</em>)</button>
+<button class="collapsible round">Code block (<em>Skybox.gdshader</em>)</button>
 <div class="collapsible__content round code"><pre class="line-numbers" data-line="1-2,6-7" style="margin:0;"><code class="language-glsl">uniform float _StarLatitude : hint_range(-90, 90) = 0;
 uniform float _StarSpeed = 0.001;
 
@@ -607,40 +609,30 @@ void sky() {
 
 <h3 id="constellations">5.2 Constellations</h3>
 
-<p>The star map is technically finished, however, when looking for a star map I found that NASA also has a constellation map and it might be fun to add it to our sky. It is also really easy to add with what we already have. Download the constellation map from the picture below or from NASA <a href="https://svs.gsfc.nasa.gov/4851" target="_blank">directly</a>, it is the "Constellation figures in celestial coordinates." at 4096x2048 resolution. Don't forget to set the import setting's Texture Shape to Cube.</p>
+<p>The star map is technically finished, however, when looking for a star map I found that NASA also has a constellation map and it might be fun to add it to our sky. It is also really easy to add with what we already have. Download the constellation cubemap from the picture below or generate it from <a href="https://svs.gsfc.nasa.gov/4851" target="_blank">NASA's equirectangular texture</a>, it is the "Constellation figures in celestial coordinates.". Don't forget to set the import settings Cubemap.</p>
 
 <div class="container image__container round" style="width:100%">
-    <img src="/assets/posts/tutorials/skybox-tutorial-part-1/constellation_figures_4k.png" alt="The constellation map by NASA's Scientific Visualization Studio." class="image__caption image__modal">
+    <img src="/assets/posts/tutorials/skybox-tutorial-godot/StarConstellationsCubemap.jpg" alt="The constellation cubemap generated from NASA's Scientific Visualization Studio image." class="image__caption image__modal">
 </div>
 
-<p>Now add the map as property, as well as a colour for the constellation lines. We can reuse the <cn>starUVW</cn> as UVW, so sample the texture and multiply it by the <cn>_ConstellationColor</cn>. Again we need to mask the sun and moon, as well as multiply it by the <cn>starStrength</cn>. Finally, add the result to the final <cn>col</cn>. Add or change the highlighted lines.</p>
+<p>Now add the cubemap uniform, as well as a colour for the constellation lines. We can reuse the <cn>starUVW</cn>, so sample the texture and multiply it by the <cn>_ConstellationColor</cn>. Again we need to mask the sun and moon, as well as multiply it by the <cn>starStrength</cn>. Finally, add the result to the final <cn>col</cn>. Add or change the highlighted lines.</p>
 
-<button class="collapsible round">Code block (<em>Skybox.shader</em>)</button>
-<div class="collapsible__content round code"><pre class="line-numbers" data-line="3-4, 8, 11, 15-17, 19" style="margin:0;"><code class="language-glsl">Properties
-{
-    [NoScaleOffset] _ConstellationCubeMap ("Constellation cube map", Cube) = "blank" {}
-    _ConstellationColor ("Constellation color", Color) = (0,0.3,0.6,1)
-}
+<button class="collapsible round">Code block (<em>Skybox.gdshader</em>)</button>
+<div class="collapsible__content round code"><pre class="line-numbers" data-line="1-2, 5-9" style="margin:0;"><code class="language-glsl">uniform samplerCube _StarConstellationCubemap : source_color;
+uniform vec3 _StarConstellationColor : source_color = vec3(0.0, 0.3, 0.6);
 
-TEXTURECUBE(_StarCubeMap);      SAMPLER(sampler_StarCubeMap);
-TEXTURECUBE(_ConstellationCubeMap); SAMPLER(sampler_ConstellationCubeMap);
-
-float _StarLatitude, _StarSpeed;
-float3 _ConstellationColor;
-
-float4 Fragment (v2f IN) : SV_TARGET
-{
+void sky() {
     // The constellations
-    float3 constColor = SAMPLE_TEXTURECUBE(_ConstellationCubeMap, sampler_ConstellationCubeMap, starUVW).rgb * _ConstellationColor;
-    constColor *= (1 - sunMask) * (1 - moonMask) * starStrength;
+	vec3 constColor = texture(_StarConstellationCubemap, starUVW).rgb;
+	constColor *= _StarConstellationColor * starMask * starStrength;
 
-    float3 col = skyColor + sunColor + moonColor + starColor + constColor;
+    vec3 col = skyColor + sunColor + moonColor + starColor + constColor;
 }
 </code></pre>
 </div>
 
 <div class="container image__container round" style="width:100%">
-    <img src="/assets/posts/tutorials/skybox-tutorial-part-1/SkyboxP1_TheStars_Constellation.png" alt="The night sky with constellations, Ursa Minor can be seen at the top." class="image__caption image__modal">
+    <img src="/assets/posts/tutorials/skybox-tutorial-godot/Skybox_TheStars_Constellation.png" alt="The night sky with constellations, Ursa Minor can be seen at the top." class="image__caption image__modal">
 </div>
 
 
